--- a/templates/main.html
+++ b/templates/main.html
@@ -18,11 +18,11 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
     <script type="text/javascript" language="javascript" src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    
+
     <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
     <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
-    
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
         integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
         crossorigin="" />
@@ -44,7 +44,7 @@
             text-align: center;
             padding-top: 60px;
             line-height: 100px;
-            }
+        }
 
         .paral {
             height: 350px;
@@ -57,26 +57,27 @@
             background-image: url(https://png.pngtree.com/thumb_back/fw800/background/20200325/pngtree-red-gradient-creative-virus-background-image_332715.jpg);
         }
 
-        .info { 
+        .info {
             padding: 6px 8px;
             text-align: center;
             font: 14px/16px Arial, Helvetica, sans-serif;
-            background: white; 
-            box-shadow: 0 0 15px rgba(0,0,0,0.2); 
-            border-radius: 5px; }
-    
+            background: white;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+            border-radius: 5px;
+        }
+
         .info h3 {
             color: #777;
             font-weight: bold;
             font-size: medium;
         }
-    
+
         .legend {
             text-align: left;
             line-height: 18px;
             color: #555;
         }
-    
+
         .legend i {
             width: 18px;
             height: 18px;
@@ -94,33 +95,39 @@
             min-width: 30px;
         }
     </style>
-    
+
 </head>
 
 <body>
     <div class="jumbotron paral paralsec">
-                <h1>Sentiment Analysis Of COVID-19 Tweets – Dashboard For Visualization</h1>
-            </div>
+        <h1>Sentiment Analysis Of COVID-19 Tweets – Dashboard For Visualization</h1>
+    </div>
     {% endblock %}
     <div class="container">
-    {% block all %}
+        {% block all %}
         <div class="card-columns" style="padding-top: 220px;">
             <div class="card border-success mb-3" style="max-width: 18rem;">
-                <div class="card-header bg-transparent border-success"><h5 class="card-title text-success" style="text-align: center;">Positive Sentiments</h5></div>
+                <div class="card-header bg-transparent border-success">
+                    <h5 class="card-title text-success" style="text-align: center;">Positive Sentiments</h5>
+                </div>
                 <div class="card-body text-success">
                     <p class="card-text">Cummulative percentage during complete lockdown is {{ls[1] | safe}}
                     </p>
                 </div>
             </div>
             <div class="card border-warning mb-3" style="max-width: 18rem;">
-                <div class="card-header bg-transparent border-warning"><h5 class="card-title text-warning" style="text-align: center;">Neutral Sentiments</h5></div>
+                <div class="card-header bg-transparent border-warning">
+                    <h5 class="card-title text-warning" style="text-align: center;">Neutral Sentiments</h5>
+                </div>
                 <div class="card-body text-warning">
                     <p class="card-text">Cummulative percentage during complete lockdown is {{ls[2] | safe}}
                     </p>
                 </div>
             </div>
             <div class="card border-danger mb-3" style="max-width: 18rem;">
-                <div class="card-header bg-transparent border-danger"><h5 class="card-title text-danger" style="text-align: center;">Negative Sentiments</h5></div>
+                <div class="card-header bg-transparent border-danger">
+                    <h5 class="card-title text-danger" style="text-align: center;">Negative Sentiments</h5>
+                </div>
                 <div class="card-body text-danger">
                     <p class="card-text">Cummulative percentage during complete lockdown is {{ls[3] | safe}}
                     </p>
@@ -131,10 +138,10 @@
         <br>
         <br>
         <form action="{{ url_for('states') }}" method="POST">
-        <div id='map'></div>
+            <div id='map'></div>
         </form>
         <script type="text/javascript" src="../static/js/statesData.js"></script>
-        
+
         <script type="text/javascript">
 
             var map = L.map('map').setView([21.1458, 78.0882], 5);
@@ -173,17 +180,17 @@
             // get color depending on population density value
             function getColor(d) {
                 return d > 85.35 ? '#800026' :
-                d > 80.00 ? '#006837' :
-                d > 78.50 ? '#1a9850' :
-                d > 76.50 ? '#66bd63' :
-                d > 74.50 ? '#a6d96a' :
-                d > 72.50 ? '#d9ef8b' :
-                d > 70.10 ? '#ffffbf' :
-                d > 69.00 ? '#fee08b' :
-                d > 67.50 ? '#fdae61' :
-                d > 66.50 ? '#f46d43' :
-                d > 63.50 ? '#d73027' :
-                '#a50026';
+                    d > 80.00 ? '#006837' :
+                        d > 78.50 ? '#1a9850' :
+                            d > 76.50 ? '#66bd63' :
+                                d > 74.50 ? '#a6d96a' :
+                                    d > 72.50 ? '#d9ef8b' :
+                                        d > 70.10 ? '#ffffbf' :
+                                            d > 69.00 ? '#fee08b' :
+                                                d > 67.50 ? '#fdae61' :
+                                                    d > 66.50 ? '#f46d43' :
+                                                        d > 63.50 ? '#d73027' :
+                                                            '#a50026';
             }
 
             function style(feature) {
@@ -223,7 +230,7 @@
             function mapclick(e) {
                 var layer = e.target;
                 var props = layer.feature.properties;
-                layer.bindPopup('<input name="button" class="atext" type="submit" value="More About ' + props.name +  "\">").addTo(map);
+                layer.bindPopup('<input name="button" class="atext" type="submit" value="More About ' + props.name + "\">").addTo(map);
                 layer.openPopup();
             }
 
@@ -248,7 +255,10 @@
         <br>
         <br>
         <br>
-    {% endblock %}
+        <br>
+        <br>
+        <br>
+        {% endblock %}
 
         <div class="component">
             <!-- Start Nav Structure -->
@@ -258,7 +268,7 @@
                     <li><a href="#"><span class="icon-picture"></span></a></li>
                     <li><a href="{{url_for('four')}}"><span>4</span></a></li>
                     <li><a href="{{url_for('home')}}"><span class="icon-home"></span></a></li>
-                    <li><a href="{{url_for('prediction')}}"><span >Pred</span></a></li>
+                    <li><a href="{{url_for('prediction')}}"><span>Pred</span></a></li>
                     <li><a href="#"><span class="icon-envelope-alt"></span></a></li>
                 </ul>
             </div>
