--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -59,6 +59,84 @@
             background-color: blueviolet;
             color: azure;
         }
+
+        main {
+            min-width: 300px;
+            max-width: 500px;
+            margin: auto;
+        }
+
+        p {
+            font-size: 1em;
+            line-height: 1.75em;
+            border-top: 3px solid;
+            border-image: linear-gradient(to right, #743ad5 0%, #d53a9d 100%);
+            border-image-slice: 1;
+            border-width: 3px;
+            margin: 0;
+            padding: 40px;
+            counter-increment: section;
+            position: relative;
+        }
+
+        before {
+            font-size: 1em;
+            line-height: 1.75em;
+            border-top: 3px solid;
+            border-image: linear-gradient(to right, #743ad5 0%, #d53a9d 100%);
+            border-image-slice: 1;
+            border-width: 3px;
+            margin: 0;
+            padding: 40px;
+            counter-increment: section;
+            position: relative;
+            content: counter(section);
+            position: absolute;
+            border-radius: 50%;
+            padding: 10px;
+            height: 1.25em;
+            width: 1.25em;
+            text-align: center;
+            line-height: 1.25em;
+            font-size: 1em;
+        }
+
+
+        p:nth-child(odd) {
+            border-right: 3px solid;
+            padding-left: 0;
+        }
+
+        before {
+            border-right: 3px solid;
+            padding-left: 0;
+            left: 100%;
+            margin-left: -20px;
+        }
+
+
+        p:nth-child(even) {
+            border-left: 3px solid;
+            padding-right: 0;
+        }
+
+        before {
+            border-left: 3px solid;
+            padding-right: 0;
+            right: 100%;
+            margin-right: -20px;
+        }
+
+        p:first-child {
+            border-top: 0;
+            border-top-right-radius: 0;
+            border-top-left-radius: 0;
+        }
+
+        p:last-child {
+            border-bottom-right-radius: 0;
+            border-bottom-left-radius: 0;
+        }
     </style>
 </head>
 
@@ -77,9 +155,53 @@
     </div>
     <br>
     <br>
+    <main>
+        <p style=" background-image: linear-gradient(to left, rgb(184, 48, 184), rgb(59, 9, 95),blue);
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        background-clip: text;
+        color: transparent;">Doggo ipsum
+            long bois lotsa pats
+            blep. What a nice floof ruff super chub
+            very good spot, the neighborhood
+            pupper
+            lotsa pats. Borkdrive shibe shoober what a nice floof, borking doggo.</p>
+        <p style=" background-image: linear-gradient(to left, rgb(184, 48, 184), rgb(59, 9, 95),blue);
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        background-clip: text;
+        color: transparent;">Shoober
+            shooberino adorable doggo many pats, heckin good boys many pats pupper wrinkler, corgo maximum
+            borkdrive. A
+            frighten puggo wow very biscit.</p>
+        <p style=" background-image: linear-gradient(to left, rgb(184, 48, 184), rgb(59, 9, 95),blue);
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        background-clip: text;
+        color: transparent;">Big ol h*ck
+            adorable doggo vvv smol borking doggo with a long snoot for pats big ol, he made many woofs doing
+            me a
+            frighten puggo wow very biscit, ruff fat boi ruff long doggo. </p>
+        <p style=" background-image: linear-gradient(to left, rgb(184, 48, 184), rgb(59, 9, 95),blue);
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        background-clip: text;
+        color: transparent;">Long bois
+            mlem I am bekom fat wrinkler puggo maximum borkdrive big ol pupper I am bekom fat, fluffer vvv
+            adorable
+            doggo lotsa pats snoot. I am bekom fat ur givin me a spook length boy wow very biscit very good spot.</p>
+    </main>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <form action="{{url_for('prediction2')}}" method="POST">
         <button name="fbutton" class="atext" type="submit" value="Next"><b>Next</b></button>
     </form>
+    <br>
     <br>
     <table class="table">
         <tr>
@@ -158,4 +280,7 @@
     <div class="result">
         {{prediction}}
     </div>
+    <br>
+    <br>
+    <br>
     {% endblock %}
