--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -160,36 +160,22 @@
         -webkit-background-clip: text;
         -moz-background-clip: text;
         background-clip: text;
-        color: transparent;">Doggo ipsum
-            long bois lotsa pats
-            blep. What a nice floof ruff super chub
-            very good spot, the neighborhood
-            pupper
-            lotsa pats. Borkdrive shibe shoober what a nice floof, borking doggo.</p>
+        color: transparent;">For using any Machine Learning technique we split main data into train and validation part, where we train the model on training part and made the prediction on validation part. First one is train data, here it is used to train Stacked LSTM(Deep Learning Technique) model that is used to predict future sentiments of people. This time we predict the sentiments for next 1 week. </p>
         <p style=" background-image: linear-gradient(to left, rgb(184, 48, 184), rgb(59, 9, 95),blue);
         -webkit-background-clip: text;
         -moz-background-clip: text;
         background-clip: text;
-        color: transparent;">Shoober
-            shooberino adorable doggo many pats, heckin good boys many pats pupper wrinkler, corgo maximum
-            borkdrive. A
-            frighten puggo wow very biscit.</p>
+        color: transparent;">Next is Validation part we create this part mainly to check the accuracy of the model i.e. how well our model predicts the actual values.</p>
         <p style=" background-image: linear-gradient(to left, rgb(184, 48, 184), rgb(59, 9, 95),blue);
         -webkit-background-clip: text;
         -moz-background-clip: text;
         background-clip: text;
-        color: transparent;">Big ol h*ck
-            adorable doggo vvv smol borking doggo with a long snoot for pats big ol, he made many woofs doing
-            me a
-            frighten puggo wow very biscit, ruff fat boi ruff long doggo. </p>
+        color: transparent;">Moving on further we have Predictions set these are the values that we predicted from Validation part and as it is clear from plots itself that the values for both the Predictions and Validation part are almost similar this indicates that our model achieve good accuracy </p>
         <p style=" background-image: linear-gradient(to left, rgb(184, 48, 184), rgb(59, 9, 95),blue);
         -webkit-background-clip: text;
         -moz-background-clip: text;
         background-clip: text;
-        color: transparent;">Long bois
-            mlem I am bekom fat wrinkler puggo maximum borkdrive big ol pupper I am bekom fat, fluffer vvv
-            adorable
-            doggo lotsa pats snoot. I am bekom fat ur givin me a spook length boy wow very biscit very good spot.</p>
+        color: transparent;">Now the main game starts from here that is prety much useful. The final step that is of prediction of future sentiments of next 7 days. Now user would get rough idea about the sentiments of people in advance. NOTE:- THIS IS JUST A PREDICTIVE MODEL ACTUAL SENTIMENTS MAY NOT BE THE SAME.</p>
     </main>
     <br>
     <br>
